refactor(docs): add base path to swagger paths, remove base path from swagger servers
